tests/samples/negative/generics/duplicate_generic_fn.ax
module duplicate_generic_fn;

fn id[T](value: T) -> T {
    return value;
}

fn id[U](value: U) -> U {
    return value;
}

fn main() -> i32 {
    return 0;
}
